--- a/juliagoda-kernels/trunk/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/trunk/linux-juliagoda-git/PKGBUILD
@@ -59,8 +59,7 @@ _1k_HZ_ticks=y
 # ATTENTION - one of two predefined values should be selected!
 # 'actual' - stable releases (recommended)
 # 'testing' - rc releases (active only temporarily)
-# 'trunk' - dev releases (active only temporarily)
-_linux_lucjan=trunk
+_linux_lucjan=actual
 
 ### Do not edit below this line unless you know what you're doing
 
@@ -82,22 +81,13 @@ if [ "$_linux_lucjan" = "actual" ]; then
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/actual"
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
  _lucjanname='lucjan'
- _lucjanrev='ll44'
+ _lucjanrev='ll1'
  _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 
 elif [ "$_linux_lucjan" = "testing" ]; then
 
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/testing"
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/testing"
- _lucjanname='lucjan'
- _lucjanrev='ll46'
- _lucjanrc='rc1'
- _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
-
-elif [ "$_linux_lucjan" = "trunk" ]; then
-
-# _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/trunk"
- _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/trunk"
  _lucjanname='lucjan'
  _lucjanrev='ll1'
  _lucjanrc='rc7'
