--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -59,7 +59,7 @@ _major=5.0
 _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
-pkgver=5.0.2_1.r1020.ga5b2dbd
+pkgver=5.0.3_1.r1024.g79fda74
 pkgrel=1
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -71,8 +71,8 @@ if [ -n "$_htmldocs_enable" ]; then
     makedepends+=('python-sphinx' 'graphviz')
 fi
 
-source=("https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
-        "https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.sign"
+source=("https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
+        "https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.sign"
         "git://github.com/damentz/${_lqxpatchname}"
          # pacman hook for depmod
         '60-linux.hook'
