--- a/linux-5.1/uml/linux-usermode-rc/PKGBUILD
+++ b/linux-5.1/uml/linux-usermode-rc/PKGBUILD
@@ -5,12 +5,11 @@ pkgbase=linux-usermode-rc
 pkgname=('linux-usermode-rc' 'linux-usermode-rc-modules')
 _kernelname=-usermodelinux-rc
 _major=5.1
-_minor=0
+_minor=2
 _minorc=$((_minor+1))
 _rcver=rc1
 pkgver=${_major}.${_minorc}
-#_stable=${_major}.${_minor}
-_stable=${_major}
+_stable=${_major}.${_minor}
 _stablerc=${pkgver}-${_rcver}
 _srcname=linux-${_stable}
 pkgrel=1
@@ -27,9 +26,9 @@ source=("https://www.kernel.org/pub/linux/kernel/v5.x/linux-${_stable}.tar.xz"
         'config'
         '70-uml.hook')
 
-sha256sums=('d06a7be6e73f97d1350677ad3bae0ce7daecb79c2c2902aaabe806f7fa94f041'
+sha256sums=('ec7ad67a423698855200b46e1c7ee325d68a8fe4706c66fe456780a8c99bef5b'
             'SKIP'
-            'd8a3340ee4f9b3e2a27be67132b15c3e83706e9024064fe9ca4fd3ebcbbd8456'
+            '1ca207233c77e9f46580845081bb56b1398b70164b7d9383b3140e67612cba0c'
             'SKIP'
             'e332b59fbcb2c8e38f54613b26e220fb62c03d547f7d9fdb6f8a883d4d768227'
             '452b8d4d71e1565ca91b1bebb280693549222ef51c47ba8964e411b2d461699c')
