--- a/linux-5.1/uksm/stable/linux-uksm/PKGBUILD
+++ b/linux-5.1/uksm/stable/linux-uksm/PKGBUILD
@@ -54,7 +54,7 @@ _major=5.1
 _minor=4
 pkgver=${_major}.${_minor}
 _srcname=linux-${pkgver}
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
 license=('GPL2')
@@ -80,6 +80,7 @@ source=("https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
         "${_lucjanpath}/uksm-pf-fix/${_uksm_fix}"
         #"${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/arch-patches/0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
+        "${_lucjanpath}/arch-patches-v2/0001-Revert-dm-eliminate-split_discard_bios-flag-from-DM-.patch"
          # the main kernel config files
         'config'
          # pacman hook for depmod
@@ -379,6 +380,7 @@ sha512sums=('b423c1d40ccbe8d8f96e4e44395f4263da68cd77396f66d97197686d504d622202d
             '08409bca9c5e92840635b3bdd2267f5177334a29e5460d5e52e62ed3bf228b5bd9e6ac27491570a5d627faadeba558e5eab4c8789525fa57c9c20891ea75261e'
             '6d8f5f5999de7639da38385c48c8617baf1a74a986d648eb555f1e5213dc29ab52313f8f14a71330b678b577fbf0c1a40740cb6cab27f440fb2288b053bc6d8d'
             '03b1234269e3199d4687130a9f81461511d7a7bf2583e8ef7181a20c453d98ec4f574158ba21026d0a536cc25458363af2c61206e41d95040e30f3a658c29138'
+            'e19869bbaa0ad2d937b278d0d37bf6f56574a358ac19880efdfe232e1c1e3b47f20260019683edfbfb572e60b281442e17fb66624739cb7c97cda5dec7dfcc68'
             '62bfc954d683b583363a932e7eb01603e1396da837440c86a10af93199016e42b92323be66790e3ed3c9b6107c7a9aefd5062308b3976e2dc6cf47e9d20a74d5'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
