--- a/juliagoda-kernels/trunk/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/trunk/linux-juliagoda-git/PKGBUILD
@@ -70,7 +70,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=5.1
 _srcname=linux-stable-rc
-pkgver=5.1.3.r129.gcce3bc9ebd2f.ll1
+pkgver=5.1.3.r126.ga8112defa801.ll1
 pkgrel=3
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
