--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -61,7 +61,7 @@ _1k_HZ_ticks=y
 # 'pending' - resync stable releases (active only temporarily)
 # 'testing' - rc releases (active only temporarily)
 # 'trunk' - pre-rc releases (active only temporarily)
-_linux_lucjan=testing
+_linux_lucjan=actual
 
 ### Do not edit below this line unless you know what you're doing
 
@@ -70,7 +70,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=5.1
 _srcname=linux-stable-rc
-pkgver=5.1.7.r86.g0765c25688d0.ll5
+pkgver=5.1.8.r71.g5b3d375b3838.ll5
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -83,7 +83,7 @@ if [ "$_linux_lucjan" = "actual" ]; then
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/actual"
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
  _lucjanname='lucjan'
- _lucjanrev='ll4'
+ _lucjanrev='ll5'
  _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 
 elif [ "$_linux_lucjan" = "pending" ]; then
@@ -443,7 +443,7 @@ done
 sha512sums=('SKIP'
             '580d44165a8362860e1c7062830bec1c81e14815cbff5ca20808eaf2cf6ab91d6bd8ce6fce0c37f10453cba3f7931dac7253febb33c1efeb40e44289a322973a'
             'SKIP'
-            '856823b39a1cb5069c70b02350a6c9ff54ba0dfc7b44641b8241895590628e71e28299b69a9917c1bcbaa78d1f473b24cd12bddd9e66f43cb4680507a11e92d6'
+            '78586292ae83ddaf4c33ec16b1fda68872b6db7ee244507a6970a254add78b71fbf6912b9e8b9115429bbe2206076e3ecc4b37d97f01c02f5cdd16cb74d44220'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '6d474f9f8ccdbbf3cfc10987b2b11a405bfbbac6d77d17c727c83f297c43678db57b5af7fecc365de01474183cbd53dd70d77601465ee34a0be0d983c42e14d1'
             '8742e2eed421e2f29850e18616f435536c12036ff793f5682a3a8c980cf5dbfc88d17fd9539c87de15d9e4663dc3190f964f18a4722940465437927b6052abbf'
