--- a/kernel-5.2/api-headers/linux-api-headers-git/PKGBUILD
+++ b/kernel-5.2/api-headers/linux-api-headers-git/PKGBUILD
@@ -4,9 +4,9 @@
 # toolchain build order: linux-api-headers->glibc->binutils->gcc->binutils->glibc
 
 pkgname=linux-api-headers-git
-_major=5.2
+_major=5.1
 _srcname=linux
-pkgver=5.2.r0.g0ecfebd2b524
+pkgver=5.1.r0.ge93c9c99a629
 pkgrel=1
 pkgdesc="Kernel headers sanitized for use in userspace"
 arch=('any')
@@ -14,8 +14,7 @@ url="http://www.gnu.org/software/libc"
 license=('GPL2')
 provides=('linux-api-headers=$pkgver')
 conflicts=('linux-api-headers')
-source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=master")
-#source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y")
+source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y")
 md5sums=('SKIP')
 
 pkgver() {
